# pydantic-ai-harness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLAN.md  PR_BODY.md  PR_BODY_GUARDRAILS.md  README.md  demo_code_mode.py  pyproject.toml  uv.toml
.agents/: settings.json
.agents/skills/github-workflows/: SKILL.md  check-branch-conflicts  check-pr-ci  fetch-comment  fetch-pr-comments  gather-pr-data  get-ci-failure-logs  reply-to-thread  resolve-threads  unresolved-threads
.agents/skills/manage-ralph/: SKILL.md
.agents/skills/pr-loop/: SKILL.md  detect-pr.sh  glossary.md  notify.sh  ralph-loop-diagram.md  run-loop.sh  single-ralph.sh
.agents/skills/pr-loop/phases/: code.md  goals.md  plan-research.md  plan-review.md  plan.md  publish.md  review.md  triage.md  verify.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  capability-request.yml
.github/workflows/: compat-test.yml  guard-dependencies.yml  main.yml  release-shim.yml
agent_docs/: capability-authoring.md  core-boundary.md  index.md  review-checklist.md  testing-capabilities.md
code_mode/: README.md
docs/: contributing.md  index.md  mutation-testing.md  philosophy.md  processes.md
docs/blog/: introducing-pydantic-harness.md
docs/capabilities/: index.md  memory.md
docs/specs/: aica-dashboard-spec.md
examples/: cli.py
examples/guardrails/: async_tripwire.py  cost_budget.py  prompt_injection.py  secret_leakage.py  tool_approval.py
examples/memory/: coding_assistant.py  personal_assistant.py  postgres_store.py  study_coach.py
legacy/pydantic-harness/: README.md  pyproject.toml
legacy/pydantic-harness/pydantic_harness/: __init__.py
legacy/pydantic-harness/pydantic_harness/code_mode/: __init__.py
pydantic_ai_harness/: __init__.py
pydantic_ai_harness/background_tools/: README.md  __init__.py  _capability.py
pydantic_ai_harness/code_mode/: README.md  __init__.py  _capability.py  _toolset.py
pydantic_ai_harness/environments/: __init__.py  abstract.py  exceptions.py  local.py
pydantic_ai_harness/execution_env/: README.md  _toolset.py  _truncate.py  capability.py
pydantic_ai_harness/filesystem/: __init__.py  _capability.py  _toolset.py
pydantic_ai_harness/guardrails/: README.md  __init__.py  _capability.py  _exceptions.py  _guard_result.py  _input_guard.py  _llm_guards.py  _output_guard.py
pydantic_ai_harness/logfire/: README.md  __init__.py  _managed_prompt.py
pydantic_ai_harness/media/: __init__.py  _s3.py  _store.py  _walker.py
pydantic_ai_harness/memory/: README.md  __init__.py  _abstract.py  _capability.py  _models.py  _sqlite.py  _toolset.py
pydantic_ai_harness/shell/: __init__.py  _capability.py  _toolset.py
pydantic_ai_harness/step_persistence/: README.md  __init__.py  _capability.py  _context.py  _helpers.py  _store.py  _types.py
pydantic_harness/: __init__.py
pydantic_harness/capabilities/: __init__.py  code_mode.py
pydantic_harness/code_mode/: _capability.py  _toolset.py
pydantic_harness/environments/: __init__.py
pydantic_harness/toolsets/: __init__.py  _code_mode.py
pydantic_harness/toolsets/_code_mode/: run_code.py
pydantic_harness/toolsets/code_execution/: __init__.py  run_code.py
pydantic_harness/toolsets/code_mode/: run_code.py
src/pydantic_harness/: __init__.py  adaptive_reasoning.py  approval.py  compaction.py  memory.py  planning.py  secret_masking.py  skills.py  stuck_loop_detection.py  subagent.py  system_reminders.py  tool_budget.py  tool_error_recovery.py  tool_orphan_repair.py  verification_loop.py
template/: CLAUDE.md  Makefile  README.md  pyproject.toml
template/.github/workflows/: ci.yml
template/src/my_capability/: __init__.py  capability.py
template/tests/: conftest.py  test_capability.py
tests/: conftest.py  test_adaptive_reasoning.py  test_approval.py  test_compaction.py  test_guardrails.py  test_memory.py  test_placeholder.py  test_planning.py  test_readme_quick_start.py  test_secret_masking.py  test_skills.py  test_stuck_loop_detection.py  test_subagent.py  test_system_reminders.py  test_tool_budget.py  test_tool_error_recovery.py  test_tool_orphan_repair.py  test_verification_loop.py
tests/_background_tools/: test_background_tools.py
tests/_code_mode/: test_code_mode.py  test_dbos.py  test_readme_quick_start.py  test_temporal.py
tests/_guardrails/: test_guardrails.py  test_input_guard.py  test_output_guard.py
tests/code_execution/: test_code_mode.py
tests/code_mode/: test_code_mode.py
tests/environments/: conftest.py  test_conformance.py  test_environment.py  test_environment_capability.py  test_local.py  test_truncate.py
tests/execution_env/: conftest.py  test_capability.py
tests/filesystem/: test_filesystem.py
tests/guardrails/: conftest.py  test_guardrails.py  test_input_guard.py  test_output_guard.py
tests/logfire_variables/: test_managed_prompt.py
tests/media/: conftest.py  test_media.py  test_s3_cassettes.py
tests/media/cassettes/test_s3_cassettes/: TestS3MediaStoreCassettes.test_exists_present_after_put.yaml  TestS3MediaStoreCassettes.test_exists_returns_false_for_missing.yaml  TestS3MediaStoreCassettes.test_get_missing_raises.yaml  TestS3MediaStoreCassettes.test_get_round_trips_bytes.yaml  TestS3MediaStoreCassettes.test_put_succeeds.yaml
tests/memory/: conftest.py  test_memory.py
tests/shell/: test_shell.py
tests/step_persistence/: test_sqlite_and_media.py  test_step_persistence.py
