[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'pydantic-harness'
version = '0.1.1'
description = 'Deprecated: renamed to pydantic-ai-harness'
readme = 'README.md'
requires-python = '>=3.10'
license = 'MIT'
authors = [
    { name = 'Douwe Maan', email = 'douwe@pydantic.dev' },
    { name = 'David SF', email = 'david.sanchez@pydantic.dev' },
    { name = 'Aditya Vardhan', email = 'aditya@pydantic.dev' },
]
classifiers = [
    'Development Status :: 7 - Inactive',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed',
]
dependencies = [
    'pydantic-ai-harness>=0.1.1,<0.2',
]

[project.urls]
Homepage = 'https://github.com/pydantic/pydantic-ai-harness'
Source = 'https://github.com/pydantic/pydantic-ai-harness'
Issues = 'https://github.com/pydantic/pydantic-ai-harness/issues'

[tool.hatch.build.targets.wheel]
packages = ['pydantic_harness']
